# Bavarian-code

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  checkout_submodules.sh  compile.sh  copy_files.sh  generate_all_figures.sh  generate_bound_figure.py  progrexp.py  progrres.py  run_all_bavarian.sh  run_all_exact.sh  run_everything.sh  staticexp.py  staticres.py  util.py
confs/: as-skitter.json  ca-AstroPH.json  cit-HepPh.json  com-dblp.json  com-youtube.json  email-Enron.json  example.json  globals.json  loc-gowalla.json  p2p-Gnutella31.json  soc-Epinions1.json
confs/progressive/: as-skitter.json  ca-AstroPH.json  cit-HepPh.json  com-dblp.json  com-youtube.json  email-Enron.json  loc-gowalla.json  p2p-Gnutella31.json  soc-Epinions1.json
confs/time/: ca-AstroPH.json  cit-HepPh.json  com-dblp.json  email-Enron.json  loc-gowalla.json  p2p-Gnutella31.json  soc-Epinions1.json
src/: CMakeLists.txt  bavarian.cpp  bavarian.hpp  exact.cpp  progrbavarian.cpp  schedule.cpp
src/toCopy/: Bavarian.hpp  BavarianBA.hpp  ProgrBavarian.hpp  ProgrBavarianSchedule.hpp
